<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">


    <TextView
        android:id="@+id/expense_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/type_expenses_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/expense_type_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type_label">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="104dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/expense_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:text="@string/amount_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type_label" />

    <EditText
        android:id="@+id/expense_amount_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="100$"
        android:background="@drawable/textplain_border"
        android:ems="10"
        android:hint="@string/amount_txt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_amount_label" />

    <TextView
        android:id="@+id/expense_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_of_the_trip_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_amount_input" />

    <Button
        android:id="@+id/expense_time_btn"
        style="?android:spinnerStyle"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textplain_border"
        android:onClick="openDatePicker"
        android:text="@string/date_example"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_time_label" />

    <Button
        android:id="@+id/addExpenses"
        android:layout_width="214dp"
        android:layout_height="58dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/add_btn"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_time_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>
